--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -45,8 +45,7 @@ jobs:
       - name: Upload Release Asset
         uses: softprops/action-gh-release@v2
         with:
-          prerelease: ${{ steps.set_release.outputs.PRERELEASE }}
-          tag_name: ${{ steps.set_release.outputs.RELEASE_TAG }}
+          tag_name: ${{ steps.get_version.outputs.version }}
           generate_release_notes: true
           files: |
             qilletni-${{ steps.get_version.outputs.version }}.tar.gz
