Added new GH action workflows

--- a/settings.gradle
+++ b/settings.gradle
@@ -1,1 +1,14 @@
+plugins {
+    id 'com.gradle.develocity' version '4.2.2'
+}
+
 rootProject.name = 'QilletniToolchain'
+
+develocity {
+    buildScan {
+        termsOfUseUrl = "https://gradle.com/terms-of-service"
+        termsOfUseAgree = "yes"
+        var isCI = providers.environmentVariable("CI").isPresent()
+        publishing.onlyIf { isCI }
+    }
+}
