--- a/.github/workflows/publish-snapshot.yml
+++ b/.github/workflows/publish-snapshot.yml
@@ -59,10 +59,11 @@ jobs:
           prerelease: true
 
       - name: Create snapshot release
-        run: |
-          gh release create "${{ steps.get_version.outputs.version }}" \
-            --notes-file RELEASE_NOTES.md \
-            qilletni-${{ steps.get_version.outputs.version }}.tar.gz \
+        uses: softprops/action-gh-release@v2
+        with:
+          tag_name: ${{ steps.get_version.outputs.version }}
+          prerelease: true
+          body_path: RELEASE_NOTES.md
+          files: |
+            qilletni-${{ steps.get_version.outputs.version }}.tar.gz
             build/libs/QilletniToolchain.jar
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
