Preparation for v1.0.0 release

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -4,6 +4,8 @@ on:
   # Manual dispatch if dependencies need to be updated
   workflow_dispatch:
   push:
+    tags:
+      - 'v*.*.*'
     branches:
       - master
 
