--- a/build.gradle
+++ b/build.gradle
@@ -7,7 +7,7 @@ plugins {
 } 
 
 group = 'dev.qilletni.toolchain'
-version = '1.0.0-SNAPSHOT'
+version = '1.0.0'
 
 sourceCompatibility = JavaVersion.VERSION_22
 targetCompatibility = JavaVersion.VERSION_22
@@ -29,12 +29,11 @@ dependencies {
     implementation 'info.picocli:picocli:4.7.5'
     annotationProcessor 'info.picocli:picocli-codegen:4.7.5'
 
-    implementation 'dev.qilletni.impl:qilletni:1.0.0-SNAPSHOT'
-    implementation 'dev.qilletni.impl:qilletni:1.0.0-SNAPSHOT:sources'
+    implementation 'dev.qilletni.impl:qilletni:1.0.0'
 
-    implementation 'dev.qilletni.api:qilletni-api:1.0.0-SNAPSHOT'
-    implementation 'dev.qilletni.pkgutil:qilletni-pkgutil:1.0.0-SNAPSHOT'
-    implementation 'dev.qilletni.docgen:qilletni-docgen:1.0.0-SNAPSHOT'
+    implementation 'dev.qilletni.api:qilletni-api:1.0.0'
+    implementation 'dev.qilletni.pkgutil:qilletni-pkgutil:1.0.0'
+    implementation 'dev.qilletni.docgen:qilletni-docgen:1.0.0'
 
     // Configs
     implementation 'org.yaml:snakeyaml:2.2'
