--- a/toolchain-logging/build.gradle
+++ b/toolchain-logging/build.gradle
@@ -3,7 +3,7 @@ plugins {
 }
 
 group = 'dev.qilletni.toolchain'
-version = '1.0.0-SNAPSHOT'
+version = '1.0.0'
 
 sourceCompatibility = JavaVersion.VERSION_22
 targetCompatibility = JavaVersion.VERSION_22
@@ -23,12 +23,9 @@ dependencies {
     implementation 'org.apache.logging.log4j:log4j-core:2.25.3'
     annotationProcessor 'org.apache.logging.log4j:log4j-core:2.25.3'
 
-    implementation 'dev.qilletni.api:qilletni-api:1.0.0-SNAPSHOT'
+    implementation 'dev.qilletni.api:qilletni-api:1.0.0'
 
-    // SLF4J for logging (used by ProgressDisplay)
     implementation 'org.slf4j:slf4j-api:2.0.16'
-
-    // PicoCLI for ANSI color support (used by ColorSupport)
     implementation 'info.picocli:picocli:4.7.5'
 }
 
